--- a/app/src/main/res/layout/activity_delete.xml
+++ b/app/src/main/res/layout/activity_delete.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="@string/Allergen"
+            android:text="@string/delete"
             android:textSize="18sp" />
 
         <EditText
@@ -33,13 +33,8 @@
             android:inputType="text"
             tools:ignore="LabelFor" />
 
-        <CheckBox
-            android:id="@+id/checkSeverity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="@string/severity" />
 
     </LinearLayout>
 
 </LinearLayout>
+
